<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Boom Recorder</string>
    <string name="start_record" tools:ignore="MissingTranslation">Start Recording</string>
    <string name="stop_record">Stop Recording</string>
    <string name="pause_record">Pause Recording</string>
    <string name="camera">Camera</string>
    <string name="record_screen_with_camera">Record screen + camera</string>
    <string name="record_screen">Record screen</string>
    <string name="my_videos">My Videos</string>
    <string name="recent_videos">Recent Videos</string>
    <string name="recording_in_progress">Recording in progress...</string>
    <string name="video">Video</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="edit_title">Edit Title</string>
    <string name="delete">Delete</string>
    <string name="file_name">File Name</string>
    <string name="file_duration">Duration: %1$s</string>
    <string name="file_resolution">Resolution: %1$s*%2$s</string>
    <string name="file_size">Size: %1$s</string>
    <string name="share_your_video">Share your video</string>
    <string name="share_to">Share To</string>
    <string name="recording_notification">Screen Recording in progress</string>
    <string name="recording_control">Recording controller</string>

    <string name="display_over_other_apps_request_tip">Not enabled display over other apps.</string>
    <string name="display_over_other_apps_fail_tip">Display over other apps request fail.</string>
    <string name="no_permission_to_record">No permission to record.</string>
    <string name="no_permission_to_list_record">No permission to list record.</string>
    <string name="no_records">No records.</string>
    <string name="version">Boom Recorder Version %1$s</string>
    <string name="version2">Version %s</string>
    <string name="copy_rights">©%1$s Boom recorder. All rights reserved.</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_success">Share successfully.</string>
    <string name="share_fail">Share failed.</string>
    <string name="email_subject">Problem Report: %1$s %2$s for Android: %3$s</string>
    <string name="email_body">Provide information about your issue here, and then send this email.\nDescription of problem:</string>

    <string name="control_settings">Control Settings</string>
    <string name="time_delay_before_recording">Time delay before recording</string>
    <string name="delay_value_in_seconds">Delay value in seconds</string>
    <string name="current_time">Current time: %1$s</string>

    <string name="record_camera">Record camera</string>
    <string name="front_camera">Front camera</string>
    <string name="rear_camera">Rear camera</string>


    <string name="video_settings">Video Settings</string>
    <string name="file_name_format">File name format</string>

    <string name="resolution">Resolution</string>
    <string name="use_screen_resolution">Screen resolution \n(%1$sx%2$s)</string>
    <string name="use_screen_resolution_short">(%1$sx%2$s)</string>
    <string name="resolution_value">%1$sx%2$s (%3$s)</string>
    <string name="bitrate">Bitrate</string>
    <string name="bitrate_value">Bitrate (%1$s Mbps)</string>
    <string name="bitrate_value_desc">Select quality of recording. Higher quality means larger video file sizes</string>
    <string name="frame_rate">Frame rate</string>
    <string name="frame_rate_value">Frame rate (%1$s fps)</string>
    <string name="frame_rate_desc">Higher rate means more CPU usage</string>

    <string name="audio_bitrate_with_value">Audio bitrate (%1$s Kbps)</string>
    <string name="audio_bitrate">Audio bitrate</string>
    <string name="audio_bitrate_desc">Sound quality while recording screen</string>
    <string name="audio_sample_rate">Audio sample rate</string>
    <string name="audio_sample_rate_value">%1$s Hz</string>
    <string name="audio_channel">Audio channel</string>
    <string name="audio_channel_with_value">%1$s</string>
    <string name="record_audio">Record audio</string>

    <string name="storage_value">%1$s</string>
    <string name="storage_location">Recording folder location</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="checked">Checked</string>
    <string name="app_crashed_tip">App crashed, will exist. You can send log by About > Contact Us</string>
</resources>