<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_view1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158"
        android:src="@drawable/ic_1"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        android:text="@string/version"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_copy_rights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_rights"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_version"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_contact_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_copy_rights"
        android:textColor="@color/blue_normal"
        android:textColorLink="@color/blue_pressed"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="16dp"
        android:clickable="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>